--- a/sp/index.css
+++ b/sp/index.css
@@ -65,6 +65,9 @@ a{
   /*コレ*/
   transform: translate(-15%,-50%);
   display: none;
+  background-color: rgb(255, 255, 255 , 0.3);
+  padding: 10px 10px;
+  border-radius: 20px;
 }
 
 .WEBdesign{
