--- a/sp/index.css
+++ b/sp/index.css
@@ -60,13 +60,13 @@ a{
 .tab02{
   text-align: center;
   position: absolute;
-  left: 25%;
+/*   left: 25%; */
   top: 89%;
   /*コレ*/
-  transform: translate(-15%,-50%);
+  transform: translate(5%,-50%);
   display: none;
   background-color: rgb(255, 255, 255 , 0.3);
-  padding: 10px 10px;
+  padding: 10px 40px;
   border-radius: 20px;
 }
 
