--- a/sp/index.css
+++ b/sp/index.css
@@ -60,14 +60,18 @@ a{
 .tab02{
   text-align: center;
   position: absolute;
-/*   left: 25%; */
+  left: 50%;
   top: 89%;
   /*コレ*/
-  transform: translate(5%,-50%);
+  transform: translate(-50%,-50%);
   display: none;
   background-color: rgb(255, 255, 255 , 0.3);
   padding: 10px 40px;
   border-radius: 20px;
+}
+
+.icon{
+  display: flex;
 }
 
 .WEBdesign{
