--- a/sp/concept.css
+++ b/sp/concept.css
@@ -40,7 +40,7 @@ h3{
 }
 
 h3::before{
-  background-color: #4B4A4B;; /* 線の色 */
+  background-color: #4B4A4B; /* 線の色 */
   border-radius: 5px; /* 線の両端を丸く */
   bottom: -10px; /* 線の位置 */
   content: "";
