--- a/sp/sp_r01.css
+++ b/sp/sp_r01.css
@@ -90,12 +90,18 @@ p{
   font-weight: bold;
   margin-left: auto;
   color: #808080;
+  font-size: 14px;
+  font-family: 'Josefin Sans', sans-serif;
+  padding-top: 3px;
 }
 
 .url_link a{
   color: #007AFF;
   text-decoration:underline;
   letter-spacing: 0.1em;
+  font-size: 14px;
+  font-family: 'Josefin Sans', sans-serif;
+  padding-top: 3px;
 }
 
 .url_title{
