--- a/sp/sp_w02.css
+++ b/sp/sp_w02.css
@@ -56,7 +56,7 @@ h2{
   font-size: 12px;
   font-family: 'Josefin Sans', sans-serif;
   color: #808080;
-  margin: 25px 0;
+  margin: 25px 0 14px 0;
   letter-spacing: 0.2em;
   line-height: 1.7em
 }
