--- a/sp/sp_w01.css
+++ b/sp/sp_w01.css
@@ -57,7 +57,7 @@ h2{
   font-size: 9px;
   font-family: 'Josefin Sans', sans-serif;
   color: #808080;
-  margin: 25px 0;
+  margin: 25px 0 14px 0;
   letter-spacing: 0.2em;
   line-height: 1.7em
 }
