--- a/sp/background.css
+++ b/sp/background.css
@@ -172,7 +172,7 @@ z-index:-1;
 width:100%;
 height: 100vh;
 /*背景画像設定*/
-background:url("img/movie_SP_background.gif") no-repeat center;
+background:url("../spimg/movie_SP_background.gif") no-repeat center;
 background-size:cover;
 border-bottom-right-radius: 20px;
 border-bottom-left-radius: 20px;
