--- a/index.css
+++ b/index.css
@@ -74,9 +74,8 @@ p{
   position: fixed;
   top: 0;
   left: 0;
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
+  overflow: hidden;
+  width: 100%;
   vertical-align: bottom;
 }
 
