--- a/pc/ba.css
+++ b/pc/ba.css
@@ -10,27 +10,25 @@ h1{
   font-family: 'Josefin Sans', sans-serif;
   color: #4B4A4B;
   letter-spacing: 0.2em;
-  margin: 0;
-  text-align: center;
-  padding: 40px 0 5px 0;
+  margin: 0 auto;
 }
 
 h2{
-  font-size: 8px;
+  font-size: 10px;
   font-family: 'Josefin Sans', sans-serif;
   color: #4B4A4B;
   letter-spacing: 0.1em;
-  text-align: center;
+  padding: 5px 0 10px 0;
   margin: 0;
 }
 
 h3{
-  font-size: 18px;
+  font-size: 14px;
   font-family: 'Noto Sans JP', sans-serif;
   color: #4B4A4B;
   letter-spacing: 0.1em;
   margin: 0;
-  padding: 10px 0;
+  padding: 10px 0 0 0;
 }
 
 p{
@@ -43,74 +41,83 @@ p{
   margin: 0;
 }
 
+.copy{
+}
+
+.in01{
+  position: absolute;
+  top: 100px;
+  left: 0px;
+}
+
+.in02{
+  position: absolute;
+  top: 200px;
+  right: 50px;
+}
+
+.in03{
+  position: absolute;
+  top: 500px;
+  left: 100px;
+}
+
 .wrapper{
   width: 80%;
   margin: 0 auto;
 }
 
-.text{
-  position: relative;
+@keyframes rotation1{
+  0%{ transform:rotate(0);}
+  100%{ transform:rotate(360deg); }
 }
 
-.text p{
-  position: absolute;
-  top: 50px;
-}
-
-/* コンセプトの動き */
-.bbs{
-  align-items: center;
-  /* background: #0e546b; */
+ul{
+  list-style: none;
+  font-size: 10px;
+  font-family: 'Noto Sans JP', sans-serif;
+  letter-spacing: 0.1em;
   color: #4B4A4B;
-  display: flex;
-  height: 40px;
-  line-height: 40px;
-  overflow:hidden;
-  width: 100%;
-  white-space:nowrap;
-  margin-top: 100px;
-  z-index: 1;
+  padding: 10px 0;
+  line-height: 2em;
+  border-top: 1px solid #4B4A4B;
+  border-bottom: 1px solid #4B4A4B;
 }
-.bbs ul {
-  animation: flowing 30s linear infinite;
-  font-size: 30px;
-  transform:translateX(100%);
+
+.content02{
+  padding: 10px 0;
+  margin: 10px 0;
+  border-top: 1px solid #4B4A4B;
+  border-bottom: 1px solid #4B4A4B;
+}
+
+.text{
+  display: flex;
+}
+
+.text01{
+  width: 45%;
+}
+
+.text02{
+  width: 55%;
+  padding-left: 10px;
+}
+
+.footer{
+  margin: 60px 30px auto;
+  display: flex;
+}
+
+.footer h2{
+  text-align: right;
+  margin: 0 0 0 auto;
+}
+
+.footer p{
   margin: 0;
   padding: 0;
-  font-family: 'Josefin Sans',sans-serif;
-  letter-spacing: 0.1em;
-}
-.bbs ul li{
-  display: inline-block;
-  padding-right: 10px;
-}
-@keyframes flowing {
-  0% { transform:translateX(-100%); }
-  100% { transform:translateX(0); }
-}
-
-.image{
-  padding: 50px 0 0 0;
-}
-
-
-.content{
-  /* background-color: #ECEEF0; */
-  padding: 50px 0;
-  position: relative;
-}
-
-.content01{
-  display: flex;
-}
-
-.background{
-  padding: 50px 0;
-}
-
-.bbs{
-  position: absolute;
-  top: -175px;
+  font-size: 5px;
 }
 
 .fadein {
@@ -122,4 +129,99 @@ p{
 .fadein.scrollin {
   opacity : 1;
   transform : translate(0, 0);
+}
+
+/*スクロールダウン全体の場所*/
+.scrolldown1{
+  /*描画位置※位置は適宜調整してください*/
+position:absolute;
+right:5%;
+bottom:50px;
+  /*全体の高さ*/
+height:50px;
+}
+
+/*Scrollテキストの描写*/
+.scrolldown1 span{
+  /*描画位置*/
+position: absolute;
+left:-5px;
+top: -50px;
+  /*テキストの形状*/
+color: #4B4A4B;
+font-size: 0.7rem;
+letter-spacing: 0.2em;
+font-size: 9px;
+writing-mode: vertical-rl;
+font-family: 'Josefin Sans', sans-serif;
+}
+
+/* 線の描写 */
+.scrolldown1::after{
+content: "";
+  /*描画位置*/
+position: absolute;
+top: 0;
+  /*線の形状*/
+width: 1px;
+height: 40px;
+background: #4B4A4B;
+  /*線の動き1.4秒かけて動く。永遠にループ*/
+animation: pathmove 1.4s ease-in-out infinite;
+opacity:0;
+}
+
+/*高さ・位置・透過が変化して線が上から下に動く*/
+@keyframes pathmove{
+0%{
+  height:0;
+  top:0;
+  opacity: 0;
+}
+30%{
+  height:40px;
+  opacity: 1;
+}
+100%{
+  height:0;
+  top:80px;
+  opacity: 0;
+}
+}
+
+/*========= レイアウトのためのCSS ===============*/
+
+
+#header{
+width:100%;
+height: 100vh;
+position: relative;
+} 
+
+#header:before{
+content: '';
+position:fixed;
+top:0;
+left:0;
+z-index:-1;
+width:100%;
+height: 100vh;
+/*背景画像設定*/
+background:url("../pcimg/background_iblock.gif") no-repeat center;
+background-size:cover;
+}
+
+.container{
+position: relative;
+z-index:1;
+background:#ffffff;
+padding-top: 60px;
+}
+
+@media screen and (max-width:768px){
+  #header,
+  #header:before{
+height: 90vh;    
+  }
+  
 }
