--- a/pc/in.css
+++ b/pc/in.css
@@ -6,12 +6,10 @@ body{
 }
 
 h1{
-  font-size: 20px;
+  font-size: 14px;
   font-family: 'Josefin Sans', sans-serif;
   color: #4B4A4B;
   letter-spacing: 0.2em;
-  margin: 0;
-  writing-mode: vertical-rl;
   margin: 0 auto;
 }
 
@@ -20,8 +18,8 @@ h2{
   font-family: 'Josefin Sans', sans-serif;
   color: #4B4A4B;
   letter-spacing: 0.1em;
-  writing-mode: vertical-rl;
-  margin: 20px auto;
+  padding: 5px 0 10px 0;
+  margin: 0;
 }
 
 p{
@@ -29,20 +27,11 @@ p{
   font-family: 'Noto Sans JP', sans-serif;
   letter-spacing: 0.1em;
   color: #4B4A4B;
-  /* padding: 10px 0; */
+  padding: 10px 0;
   line-height: 2em;
-  margin: 0;
-}
-
-.container{
-  position: relative;
 }
 
 .copy{
-  position: absolute;
-  top: 540px;
-  right: 50px;
-  text-align:right
 }
 
 .in01{
@@ -68,46 +57,13 @@ p{
   margin: 0 auto;
 }
 
-.content{
-  background-color: #ECEEF0;
-  margin-top: 500px;
-  position: relative;
-}
-
-.content02{
-  padding-top: 200px;
-}
-
-.content03{
-  padding: 30px 0 30px 0;
-}
-
-.content02 p{
+.content01 p{
   font-size: 10px;
   font-family: 'Noto Sans JP', sans-serif;
   letter-spacing: 0.1em;
   color: #4B4A4B;
   line-height: 2em;
   margin: 0;
-}
-
-.circle01{
-  position: absolute;
-  left: 50%;
-  top: -100px;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-}
-
-.circle02{
-  animation:10s linear infinite rotation1;
-  position: absolute;
-  left: 24%;
-  top: -127px;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
 }
 
 @keyframes rotation1{
@@ -123,25 +79,54 @@ ul{
   color: #4B4A4B;
   padding: 10px 0;
   line-height: 2em;
+  border-top: 1px solid #4B4A4B;
+  border-bottom: 1px solid #4B4A4B;
+}
+
+.content02{
+  display: flex;
+  padding: 10px 0;
 }
 
 .text{
-  display: flex;
+  width: 40%;
 }
 
 .text01,.text02{
   background-color: #4B4A4B;
   border-radius: 20px;
-  padding: 0 10px;
-  margin: 0 10px;
+  margin: 5px 10px;
 }
 
 .text01 p{
   color: #ffffff;
+  font-size: 9px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
 
 .text02 p{
   color: #ffffff;
+  font-size: 9px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.footer{
+  margin: 60px 30px auto;
+  display: flex;
+}
+
+.footer h2{
+  text-align: right;
+  margin: 0 0 0 auto;
+}
+
+.footer p{
+  margin: 0;
+  padding: 0;
 }
 
 .fadein {
@@ -155,12 +140,13 @@ ul{
   transform : translate(0, 0);
 }
 
+
 /*スクロールダウン全体の場所*/
 .scrolldown1{
   /*描画位置※位置は適宜調整してください*/
 position:absolute;
-right:50%;
-bottom:20px;
+right:5%;
+bottom:50px;
   /*全体の高さ*/
 height:50px;
 }
@@ -169,14 +155,14 @@ height:50px;
 .scrolldown1 span{
   /*描画位置*/
 position: absolute;
-left:-20px;
+left:-5px;
 top: -50px;
   /*テキストの形状*/
 color: #4B4A4B;
 font-size: 0.7rem;
 letter-spacing: 0.2em;
 font-size: 9px;
-/* writing-mode: vertical-rl; */
+writing-mode: vertical-rl;
 font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -231,7 +217,7 @@ z-index:-1;
 width:100%;
 height: 100vh;
 /*背景画像設定*/
-background:url("../pcimg/in_background.jpg") no-repeat center;
+background:url("../pcimg/in_application.gif") no-repeat center;
 background-size:cover;
 }
 
