--- a/sp/introduction.css
+++ b/sp/introduction.css
@@ -167,12 +167,14 @@ p{
 .footer h2{
   text-align: right;
   margin: auto 0 0 auto;
+  color: #4B4A4B;
+  font-size: 10px;
 }
 
 .footer h4{
   margin: 0;
   padding: 0;
-  font-size: 7px;
+  font-size: 5px;
 }
 
 /* スクロール */
