--- a/sp/index.css
+++ b/sp/index.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+html{
+  overflow: visible;
+}
+
 body{
   background-image: url(../spimg/SP_portfolio_backgroundimg02.jpg);
   background-size: cover;
