--- a/index.css
+++ b/index.css
@@ -71,13 +71,12 @@ p{
 
 #sp_movie{
   display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  width: 100%;
-  height: 100vh;
-  vertical-align: bottom;
+  position: absolute; 
+  top:0; 
+  width: 100%; 
+  height: 100%; 
+  background: #FFF; 
+  z-index: 9999999999;
 }
 
 #pc_content{
