--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 
 body{
   margin: 0;
+  width: 100%;
   background-color: black;
 }
 
@@ -75,11 +76,7 @@ p{
   top: 0;
   left: 0;
   object-fit: cover;
-  /* width: 100vw; */
-  /* height: 100vh; */
-  /* overflow: hidden; */
   width: 100vw;
-  /* height: 100vh; */
   vertical-align: bottom;
 }
 
