--- a/index.css
+++ b/index.css
@@ -70,11 +70,16 @@ p{
   vertical-align: bottom;
 }
 
+#movie{
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #sp_movie{
-  display: none;
   object-fit: cover;
-  width: 100vw;
-  height: auto;
+  display: none;
+  width: 100%;
 }
 
 #pc_content{
