--- a/index.css
+++ b/index.css
@@ -20,6 +20,19 @@ p{
   letter-spacing: 0.3em;
 }
 
+a{
+  font-family: 'Josefin Sans', sans-serif;
+  letter-spacing: 0.2em;
+  padding: 24px 19px 24px 22px;
+  text-decoration: none;
+  border-radius: 50%;
+  background-color: white;
+  color: black;
+  border: none;
+  margin: 30px;
+  opacity: 0.9;
+}
+
 .title{
   position: absolute;
   top: 50%;
@@ -34,30 +47,14 @@ p{
 .button{
   display: flex;
   justify-content: center;
+  margin-top: 100px;
 }
 
 .btn01, .btn02{
-}
-
-#pc_btn,#sp_btn{
   display: none;
-  font-family: 'Josefin Sans', sans-serif;
-  letter-spacing: 0.2em;
-  padding: 24px 20px 24px 23px;
-  text-decoration: none;
-  border-radius: 50%;
-  background-color: white;
-  border: none;
-  margin: 30px;
-  opacity: 0.9;
-  color: black;
 }
 
-#pc_btn:hover{
-  opacity: 1;
-}
-
-#sp_btn:hover{
+a:hover{
   opacity: 1;
 }
 
@@ -75,8 +72,6 @@ p{
 #movie{
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
 }
 
 #sp_movie{
