--- a/pc/index.css
+++ b/pc/index.css
@@ -1,6 +1,9 @@
 @charset "utf-8";
 
 body{
+  margin: 0;
+  width: 100%;
+  height: 100%;
   background-image: url(../pcimg/portfolio_backgroundimg12.jpg);
   background-size: cover;
   background-attachment: fixed;
@@ -10,7 +13,24 @@ body{
 }
 
 main{
+  display: none;
   margin: 0 auto;
+}
+
+footer{
+  display: none;
+}
+
+/* 動画の設定 */
+#opv-wrap {
+  display: none;
+}
+
+video#opv {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  vertical-align: bottom;
 }
 
 .back{
