--- a/pc/index.css
+++ b/pc/index.css
@@ -5,9 +5,11 @@ body{
   width: 100%;
   height: 100%;
   background-image: url(../pcimg/portfolio_backgroundimg12.jpg);
-  background-size: cover;
   background-attachment: fixed;
   position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 main{
