--- a/sp/introduction.css
+++ b/sp/introduction.css
@@ -58,7 +58,7 @@ h3::before{
   left: 50%; /* 線の中央寄せ */
   position: absolute;
   transform: translateX(-50%); /* 線の中央寄せ */
-  width: 120px; /* 線の長さ */
+  width: 50px; /* 線の長さ */
 }
 
 h4{
@@ -119,8 +119,8 @@ p{
 }
 
 .content02{
-  border-top: 1px solid #4B4A4B;
-  border-bottom: 1px solid #4B4A4B;
+  border-top: 1px solid #D6D0D5;
+  border-bottom: 1px solid #D6D0D5;
   padding: 10px 0;
   margin: 10px 0;
 }
@@ -170,7 +170,7 @@ p{
 .footer h2{
   text-align: right;
   margin: auto 0 0 auto;
-  color: #4B4A4B;
+  color: #808080;
   font-size: 10px;
 }
 
@@ -178,6 +178,7 @@ p{
   margin: 0;
   padding: 0;
   font-size: 5px;
+  color: #808080;
 }
 
 /* スクロール */
