--- a/pc/home.css
+++ b/pc/home.css
@@ -101,7 +101,7 @@ p{
   display: none;
 }
 /* DTPのコンテンツのページ初期を非表示 */
-#d01,#d02,#d03,#d04{
+#d01,#d02,#d03,#d04,#d05{
   display: none;
 }
 /* REALのコンテンツページ初期を非表示 */
