--- a/pc/d05.css
+++ b/pc/d05.css
@@ -151,7 +151,7 @@ z-index:-1;
 width:100%;
 height: 100vh;
 /*背景画像設定*/
-background:url("img/d05_kv.jpg") no-repeat center;
+background:url("../pcimg/d05_kv.jpg") no-repeat center;
 background-size:cover;
 }
 
