--- a/sp/sp_d05.css
+++ b/sp/sp_d05.css
@@ -214,7 +214,7 @@ z-index:-1;
 width:100%;
 height: 100vh;
 /*背景画像設定*/
-background:url("img/d05_kv.jpg") no-repeat center;
+background:url("../spimg/d05_kv.jpg") no-repeat center;
 background-size:cover;
 }
 
