--- a/pc/home.css
+++ b/pc/home.css
@@ -18,7 +18,7 @@ ul{
   letter-spacing: 0.05em;
   color: #4B4A4B;
   display: flex;
-  padding: 7px 0;
+  padding: 5px 0;
   margin: 5px;
 }
 
@@ -97,15 +97,15 @@ p{
 }
 
 /* webdesignのコンテンツページ初期を非表示 */
-#w01,#w02,#w03,#w04,#w05{
+#w01,#w02,#w03,#w04,#w05,#w06,#w07,#w08,#w09,#w10,#w11,#w12,#w13,#w14,#w15{
   display: none;
 }
 /* DTPのコンテンツのページ初期を非表示 */
-#d01,#d02,#d03,#d04,#d05{
+#d01,#d02,#d03,#d04,#d05,#d06,#d07,#d08{
   display: none;
 }
 /* REALのコンテンツページ初期を非表示 */
-#r01,#r02,#r03,#r04,#r05{
+#r01,#r02,#r03,#r04,#r05,#r06,#r07,#r08{
   display: none;
 }
 
