--- a/sp/sp_d06.css
+++ b/sp/sp_d06.css
@@ -53,12 +53,12 @@ h1{
 /* コンテンツの要素 */
 
 h2{
-  font-size: 12px;
+  font-size: 9px;
   font-family: 'Josefin Sans', sans-serif;
   color: #808080;
-  margin: 25px 0;
+  margin: 25px 0 14ox 0;
   letter-spacing: 0.2em;
-  line-height: 1.7em
+  line-height: 1.7em;
 }
 
 p{
